# dataforge-api

./: README.md  pyproject.toml
app/: main.py  telemetry.py
app/api/routes/: monitoring.py  pipelines.py
app/models/: pipeline.py
app/plugins/: __init__.py  example_plugin.py
app/services/: alerts.py  lineage.py
app/services/pipeline/: executor.py
app/services/scheduler/: scheduler.py
app/utils/: compat.py
app/workers/: celery_app.py  tasks.py
tests/test_pipelines/: test_executor.py
