[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge-api"
version = "0.1.0"
description = "ETL pipeline orchestrator — FastAPI + Celery + SQLAlchemy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.3.0",          # Pydantic V2 — breaking change from earlier FastAPI work
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0",
    "asyncpg>=0.28.0",
    "celery>=5.3.4",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "apscheduler>=3.10.4",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false   # not there yet — progressive adoption
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
